[tool.black]
skip-string-normalization = true

[tool.poetry]
authors = ["Amit Prakash Ambasta <amit.prakash.ambasta@gmail.com>"]
description = "A wrapper for pyright"
license = "GPL-3"
name = "pywrong"
readme = "README.md"
version = "0.0.0"
packages = [
  { include = 'pywrong', from = 'src' }
]
include = [
  { path = 'tests', format = 'sdist' }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
ipdb = {version = "^0.13.13", optional = true}
semantic-version = "^2.10.0"
typeguard = {version = "^4.1.2", allow-prereleases = true}
poetry = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
poetry = "^1.5.1"

[tool.poetry.extras]
debug = ['ipdb']

[tool.poetry.scripts]
pywrong = 'pywrong.server:serve'

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
